<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytLogin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lytLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/circle_progress"
            android:layout_marginEnd="@dimen/circle_progress"
            android:background="@drawable/signup_top"
            android:gravity="center"
            android:id="@+id/textview"
            android:padding="12dp"
            android:text="@string/login_with"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="@dimen/margin_10dp"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtmobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/contact"
                        android:textSize="16dp"
                        android:fontFamily="sans-serif"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/password"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:id="@+id/show"
                    android:layout_marginHorizontal="50dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/show"></ImageView>

                </RelativeLayout>
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="end"-->
<!--                    android:layout_margin="@dimen/margin_10dp"-->
<!--                    android:onClick="ForgotPassword"-->
<!--                    android:text="@string/forgot_pass"-->
<!--                    android:fontFamily="sans-serif"-->
<!--                    android:textColor="#000" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_10dp"
                    android:weightSum="2">

                    <Button

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/right_btn_bg"
                        android:gravity="center"
                        android:id="@+id/login"
                        android:onClick="LoginWithEmail"
                        android:padding="7dp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mid_text"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/left_btn_bg"
                        android:gravity="center"
                        android:padding="7dp"
                        android:id="@+id/signupbutton"
                        android:text="@string/signup"
                        android:onClick="signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mid_text"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/loginLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/circle_progress"
            android:layout_marginEnd="@dimen/circle_progress"
            android:background="@drawable/signup_bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_10dp"
            android:paddingBottom="@dimen/margin_10dp">

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>